k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openmailer
  namespace: openmailer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: openmailer
  template:
    metadata:
      labels:
        app: openmailer
    spec:
      tolerations:
      - key: node-role.kubernetes.io/control-plane
        operator: Exists
        effect: NoSchedule
      - key: node-role.kubernetes.io/master
        operator: Exists
        effect: NoSchedule
      containers:
      - name: openmailer
        image: parthsinha90/openmailer:latest
        ports:
        - containerPort: 8000
        volumeMounts:
        - name: storage
          mountPath: /var/www/html/storage
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
      volumes:
      - name: storage
        persistentVolumeClaim:
          claimName: openmailer-storage
