k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openmailer-ingress
  namespace: openmailer
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: openmailer.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: openmailer-service
            port:
              number: 80
